--- a/computer/vscode/工作区配置/settings.json
+++ b/computer/vscode/工作区配置/settings.json
@@ -31,7 +31,7 @@
   },
   {
     "tag": "私有方法",
-    "color": "#C63300",
+    "color": "#C63300"
   },
   {
     "tag": "公有方法",
@@ -68,6 +68,6 @@
   {
     "tag": "待办",
     "color": "#008B8B"
-  },
+  }
 ]
 }
