--- a/computer/vscode/工作区配置/.vscode/settings.json
+++ b/computer/vscode/工作区配置/.vscode/settings.json
@@ -1,3 +1,4 @@
+
 {
     "better-comments.tags": [
   {
@@ -22,52 +23,56 @@
     "color": "#98C379"
   },
   {
-    "tag": "属性",
+    "tag": "_属性",
     "color": "#FF44AA"
   },
   {
-    "tag": "方法",
+    "tag": "_方法",
     "color": "#FFA488"
   },
   {
-    "tag": "私有方法",
+    "tag": "_私有方法",
     "color": "#C63300"
   },
   {
-    "tag": "公有方法",
+    "tag": "_公有方法",
     "color": "#FFDD55"
   },
   {
-    "tag": "待优化",
+    "tag": "_待优化",
     "color": "#D28EFF"
   },
   {
-    "tag": "说明",
+    "tag": "_说明",
     "color":"#33FFDD"
   },
   {
-    "tag": "代码示例",
+    "tag": "_代码示例",
     "color": "#99BBFF"
   },
   {
-    "tag": "弃案",
+    "tag": "_弃案",
     "color": "#9400D3"
   },
   {
-    "tag": "解决方法",
-    "color": "#D87093 "
+    "tag": "_解决方法",
+    "color": "#D87093"
   },
   {
-    "tag": "已解决",
+    "tag": "_已解决",
     "color": "#F0E68C"
   },
   {
-    "tag": "修改日志",
+    "tag": "_修改日志",
     "color": "#DCDCDC"
   },
   {
-    "tag": "待办",
+    "tag": "_待办",
     "color": "#008B8B"
+  },
+  {
+    "tag":"_解释",
+    "color": "#FFE4E1"
   }
 ]
 }
